# ProofofClaw

./: AGENTS.md  README.md  SOUL.encrypted.json  SOUL.md
contracts/broadcast/Deploy0G.s.sol/11155111/: run-latest.json
contracts/broadcast/MintMasterClaw.s.sol/31337/: run-1775349030986.json
zkvm/: Cargo.toml
zkvm/boundless-prover/: Cargo.toml
zkvm/boundless-prover/src/: main.rs
zkvm/host/: Cargo.toml
zkvm/host/src/: main.rs
