[package]
name = "boundless-prover"
version = "0.1.0"
edition = "2021"

[dependencies]
boundless-market = { version = "1.4", default-features = false, features = ["s3"] }
alloy = { version = "1.0", default-features = false, features = ["signer-local"] }
alloy-primitives = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2"
